Dmp 1717 gap in audio playback (#844)