@@ -16,6 +16,8 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.time.Duration;
 import java.time.Instant;
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.concurrent.ExecutionException;
 
@@ -35,9 +37,15 @@ class AudioOperationServiceImplTest {
     private static final String T_09_00_00_Z = "2023-04-28T09:00:00Z";
     private static final String T_10_30_00_Z = "2023-04-28T10:30:00Z";
     private static final String T_11_00_00_Z = "2023-04-28T11:00:00Z";
+    private static final String T_11_30_00_Z = "2023-04-28T11:30:00Z";
+    private static final String T_10_30_00_Z_MS_1200 = "2023-04-28T10:30:12Z";
     private static final String FFMPEG = "/usr/bin/ffmpeg";
+    private static final Duration ALLOWABLE_GAP = Duration.ofSeconds(1);
+    private static final Duration ALLOWABLE_GAP_MS = Duration.ofMillis(1200);
 
     private List<AudioFileInfo> inputAudioFileInfos;
+    private List<AudioFileInfo> inputAudioFileInfosWithGaps;
+    private List<AudioFileInfo> inputAudioFileInfosWithMillisecondGaps;
     private Path tempDirectory;
 
     @InjectMocks
@@ -53,19 +61,49 @@ class AudioOperationServiceImplTest {
     void beforeEach() throws IOException {
         tempDirectory = Files.createTempDirectory("darts_api_unit_test");
 
-        inputAudioFileInfos = List.of(
+        inputAudioFileInfos = new ArrayList<>(Arrays.asList(
             new AudioFileInfo(
                 Instant.parse(T_09_00_00_Z),
                 Instant.parse(T_10_30_00_Z),
                 createFile(tempDirectory, "original0.mp3").toString(),
-                1
+                1,null
             ),
             new AudioFileInfo(
                 Instant.parse(T_10_30_00_Z),
                 Instant.parse(T_11_00_00_Z),
                 createFile(tempDirectory, "original1.mp3").toString(),
-                1
-            )
+                1,null
+            ))
+        );
+
+        inputAudioFileInfosWithGaps = new ArrayList<>(Arrays.asList(
+            new AudioFileInfo(
+                Instant.parse(T_09_00_00_Z),
+                Instant.parse(T_10_30_00_Z),
+                createFile(tempDirectory, "original2.mp3").toString(),
+                1,null
+            ),
+            new AudioFileInfo(
+                Instant.parse(T_11_00_00_Z),
+                Instant.parse(T_11_30_00_Z),
+                createFile(tempDirectory, "original3.mp3").toString(),
+                1,null
+            ))
+        );
+
+        inputAudioFileInfosWithMillisecondGaps = new ArrayList<>(Arrays.asList(
+            new AudioFileInfo(
+                Instant.parse(T_09_00_00_Z),
+                Instant.parse(T_10_30_00_Z),
+                createFile(tempDirectory, "original4.mp3").toString(),
+                1,null
+            ),
+            new AudioFileInfo(
+                Instant.parse(T_10_30_00_Z_MS_1200),
+                Instant.parse(T_11_30_00_Z),
+                createFile(tempDirectory, "original5.mp3").toString(),
+                1,null
+            ))
         );
     }
 
@@ -78,13 +116,13 @@ class AudioOperationServiceImplTest {
                 Instant.parse(T_09_00_00_Z),
                 Instant.parse(T_10_30_00_Z),
                 "/path/to/audio/original0.mp3",
-                1
+                1,null
             ),
             new AudioFileInfo(
                 Instant.parse(T_10_30_00_Z),
                 Instant.parse(T_11_00_00_Z),
                 "/path/to/audio/original1.mp3",
-                1
+                1,null
             )
         );
 
@@ -152,7 +190,7 @@ class AudioOperationServiceImplTest {
                 Instant.parse(T_09_00_00_Z),
                 Instant.parse(T_10_30_00_Z),
                 file.toString(),
-                1
+                1,null
             ),
             Duration.of(45, MINUTES),
             Duration.of(75, MINUTES)
@@ -232,4 +270,62 @@ class AudioOperationServiceImplTest {
         return Files.createFile(path.resolve(name));
     }
 
+    @Test
+    void shouldReturnConcatenatedAudioFileListInfoWhenValidInputAudioFilesHaveGap() throws Exception {
+        when(audioConfigurationProperties.getFfmpegExecutable()).thenReturn(FFMPEG);
+        when(audioConfigurationProperties.getConcatWorkspace()).thenReturn(tempDirectory.toString());
+        when(systemCommandExecutor.execute(any())).thenReturn(Boolean.TRUE);
+
+        List<AudioFileInfo> audioFileInfo = audioOperationService.concatenateWithGaps(
+            WORKSPACE_DIR,
+            inputAudioFileInfosWithGaps,
+            ALLOWABLE_GAP
+        );
+
+        assertTrue(audioFileInfo.get(0).getFileName().matches(".*/44887a8c-d918-4907-b9e8-38d5b1bf9c9c/C[1-4]-concatenate-[0-9]*.mp2"));
+        assertEquals(1, audioFileInfo.get(0).getChannel());
+        assertEquals(Instant.parse(T_09_00_00_Z), audioFileInfo.get(0).getStartTime());
+        assertEquals(Instant.parse(T_10_30_00_Z), audioFileInfo.get(0).getEndTime());
+        assertEquals(Instant.parse(T_11_00_00_Z), audioFileInfo.get(1).getStartTime());
+        assertEquals(Instant.parse(T_11_30_00_Z), audioFileInfo.get(1).getEndTime());
+    }
+
+    @Test
+    void shouldReturnConcatenatedAudioFileListInfoWhenValidInputAudioFilesHaveGapWithMilliseconds() throws Exception {
+        when(audioConfigurationProperties.getFfmpegExecutable()).thenReturn(FFMPEG);
+        when(audioConfigurationProperties.getConcatWorkspace()).thenReturn(tempDirectory.toString());
+        when(systemCommandExecutor.execute(any())).thenReturn(Boolean.TRUE);
+
+        List<AudioFileInfo> audioFileInfo = audioOperationService.concatenateWithGaps(
+            WORKSPACE_DIR,
+            inputAudioFileInfosWithMillisecondGaps,
+            ALLOWABLE_GAP_MS
+        );
+
+        assertTrue(audioFileInfo.get(0).getFileName().matches(".*/44887a8c-d918-4907-b9e8-38d5b1bf9c9c/C[1-4]-concatenate-[0-9]*.mp2"));
+        assertEquals(1, audioFileInfo.get(0).getChannel());
+        assertEquals(Instant.parse(T_09_00_00_Z), audioFileInfo.get(0).getStartTime());
+        assertEquals(Instant.parse(T_10_30_00_Z), audioFileInfo.get(0).getEndTime());
+        assertEquals(Instant.parse(T_10_30_00_Z_MS_1200), audioFileInfo.get(1).getStartTime());
+        assertEquals(Instant.parse(T_11_30_00_Z), audioFileInfo.get(1).getEndTime());
+    }
+
+    @Test
+    void shouldReturnConcatenatedAudioFileListInfoWhenValidInputAudioFilesHaveNoGap() throws Exception {
+        when(audioConfigurationProperties.getFfmpegExecutable()).thenReturn(FFMPEG);
+        when(audioConfigurationProperties.getConcatWorkspace()).thenReturn(tempDirectory.toString());
+        when(systemCommandExecutor.execute(any())).thenReturn(Boolean.TRUE);
+
+        List<AudioFileInfo> audioFileInfo = audioOperationService.concatenateWithGaps(
+            WORKSPACE_DIR,
+            inputAudioFileInfos,
+            ALLOWABLE_GAP
+        );
+
+        assertTrue(audioFileInfo.get(0).getFileName().matches(".*/44887a8c-d918-4907-b9e8-38d5b1bf9c9c/C[1-4]-concatenate-[0-9]*.mp2"));
+        assertEquals(1, audioFileInfo.get(0).getChannel());
+        assertEquals(Instant.parse(T_09_00_00_Z), audioFileInfo.get(0).getStartTime());
+        assertEquals(Instant.parse(T_11_00_00_Z), audioFileInfo.get(0).getEndTime());
+        assertEquals(1, audioFileInfo.size());
+    }
 }
